Version 0.9.47/CVS+dev (?? ??? 2004)
  - Fixed Bug 1085337: Categories combo-box in month.php in assistant mode
  - Modified validate.php and trailer.php to look for new $user_inc 
    user-app-*.php files to allow webcalendar to work with other 
    applications' authentication and user tables.
  - Added user-app-postnuke.php which allows webcalendar to use postnuke's
    authentication and user tables.  
  - Fixed Bug 1087604: Vanishing Layers / cookies
  - Fixed Bug 1086357: repeating details display
  - Fixed Bug 1085846: SQL error in get_my_users() function
  - Fixed Bug 1085971: repeat tab does not display details
  - Fixed Bug 1074403: Day View is not accounting for server offset
  - Added support for automatic gradient background images for table cells.
  - Updated Japanese translation with support for 3 character sets
    now (Japanese-utf8, Japanese, Japanese-eucjp)
  - Updated French translation
  - Updated German translation
Version 0.9.45 (12 Dec 2004)
  - Cleaned up user-ldap.php: added connect_and_bind function, config
    section cleanup, check all searches for attr array, etc.
  - Made search js load even when groups aren't enabled.
  - Fixed permissions so read-only cannot add/edit/delete anything
  - Added patch 1081875: added parseInt calls in js/popups.js
  - Added patch 1082460: better layout for timebar views
  - Fixed Bug 1022224: Stranded Branch in Code
  - Fixed bug 1080911: Copy entry doesn't work for assistant
  - Fixed security issue with assistants and nonuser admins
  - Fixed bug 1071725: do not use printer-friendly URLs for the
    "My Calendar" link
  - Disable all layer functionality if system settings do not allow
    viewing another user's calendar (since this would be a security
    problem.)
  - When admin is editing an approved public event, do not require the
    event to be approved again.
  - Added support for category icons.  No Admin UI yet.  Icons should
    be in icons subdirectory named by the category id, such as